--- a/client/src/lang/client/index.json
+++ b/client/src/lang/client/index.json
@@ -10,7 +10,8 @@
         "process": {
             "title": "Verfahren",
             "see-process": "siehe Prozess",
-            "last-tickets": "letzte Tickets"
+            "last-tickets": "letzte Tickets",
+            "no-entries": "Noch keine Tickets"
         }
     },
     "en": {
@@ -24,7 +25,8 @@
         "process": {
             "title": "Process",
             "see-process": "See process",
-            "last-tickets": "Last tickets"
+            "last-tickets": "Last tickets",
+            "no-entries": "No tickets yet"
         }
     },
     "es": {
@@ -38,7 +40,8 @@
         "process": {
             "title": "Proceso",
             "see-process": "Ver proceso",
-            "last-tickets": "Últimos tickets"
+            "last-tickets": "Últimos tickets",
+            "no-entries": "No hay entradas aún"
         }
     }
 }
