New services routes updated

--- a/client/src/lang/routes.json
+++ b/client/src/lang/routes.json
@@ -5,7 +5,7 @@
             "/custom-web-entwicklung": "process",
             "/web-seiten": "home",
             "/login": "login",
-            "/services": "services",
+            "/internetrseite": "services",
             "/technologien": "technologies",
             "/arbeite-mit-uns": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -17,7 +17,7 @@
             "/custom-web-development": "process",
             "/": "home",
             "/login": "login",
-            "/services": "services",
+            "/website": "services",
             "/technologies": "technologies",
             "/work-with-us": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -29,7 +29,7 @@
             "/desarrollo-web-personalizado": "process",
             "/": "home",
             "/login": "login",
-            "/services": "services",
+            "/pagina-web": "services",
             "/tecnologias": "technologies",
             "/trabaja-con-nosotros": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -43,7 +43,7 @@
             "process": "custom-web-entwicklung",
             "home": "web-seiten",
             "login": "login",
-            "services": "services",
+            "services": "internetrseite",
             "technologies": "technologien",
             "workWithUs": "arbeite-mit-uns",
             "datenschutz": "datenschutz",
@@ -55,7 +55,7 @@
             "process": "en/custom-web-development",
             "home": "en",
             "login": "en/login",
-            "services": "services",
+            "services": "website",
             "technologies": "en/technologies",
             "workWithUs": "en/work-with-us",
             "datenschutz": "datenschutz",
@@ -67,7 +67,7 @@
             "process": "es/desarrollo-web-personalizado",
             "home": "es",
             "login": "es/login",
-            "services": "services",
+            "services": "pagina-web",
             "technologies": "es/tecnologias",
             "workWithUs": "es/trabaja-con-nosotros",
             "datenschutz": "datenschutz",
