Change route: /internetrseite to /internetseite
Updated all redirects to new route

--- a/client/src/lang/routes.json
+++ b/client/src/lang/routes.json
@@ -5,7 +5,7 @@
             "/custom-web-entwicklung": "process",
             "/": "home",
             "/login": "login",
-            "/internetrseite": "services",
+            "/internetseite": "services",
             "/technologien": "technologies",
             "/arbeite-mit-uns": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -43,7 +43,7 @@
             "process": "custom-web-entwicklung",
             "home": "/",
             "login": "login",
-            "services": "internetrseite",
+            "services": "internetseite",
             "technologies": "technologien",
             "workWithUs": "arbeite-mit-uns",
             "datenschutz": "datenschutz",
