--- a/client/src/lang/routes.json
+++ b/client/src/lang/routes.json
@@ -6,6 +6,7 @@
             "/": "home",
             "/login": "login",
             "/internetseite": "services",
+            "/internetseite_dev": "services_dev",
             "/technologien": "technologies",
             "/arbeite-mit-uns": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -18,6 +19,7 @@
             "/": "home",
             "/login": "login",
             "/website": "services",
+            "/website_dev": "services_dev",
             "/technologies": "technologies",
             "/work-with-us": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -30,6 +32,7 @@
             "/": "home",
             "/login": "login",
             "/pagina-web": "services",
+            "/pagina-web_dev": "services_dev",
             "/tecnologias": "technologies",
             "/trabaja-con-nosotros": "workWithUs",
             "/datenschutz": "datenschutz",
@@ -44,6 +47,7 @@
             "home": "/",
             "login": "login",
             "services": "internetseite",
+            "services_dev": "pagina-web_dev",
             "technologies": "technologien",
             "workWithUs": "arbeite-mit-uns",
             "datenschutz": "datenschutz",
@@ -56,6 +60,7 @@
             "home": "en",
             "login": "en/login",
             "services": "website",
+            "services_dev": "website_dev",
             "technologies": "en/technologies",
             "workWithUs": "en/work-with-us",
             "datenschutz": "datenschutz",
@@ -68,6 +73,7 @@
             "home": "es",
             "login": "es/login",
             "services": "pagina-web",
+            "services_dev": "pagina-web_dev",
             "technologies": "es/tecnologias",
             "workWithUs": "es/trabaja-con-nosotros",
             "datenschutz": "datenschutz",
