hotfix/update some texts

--- a/client/src/lang/components/Modals/Contact/Index.json
+++ b/client/src/lang/components/Modals/Contact/Index.json
@@ -102,7 +102,8 @@
                         "mobile": [
                             "Web",
                             "anwendung",
-                            "mit CMS"
+                            "mit",
+                            "CMS"
                         ]
                     },
                     {
@@ -233,8 +234,8 @@
                         "mobile": [
                             "Lokalisierung",
                             "und",
-                            "Mehrsprach-",
-                            "igkeit"
+                            "Mehr-",
+                            "sprachigkeit"
                         ]
                     },
                     {
