--- a/client/src/lang/services/index.json
+++ b/client/src/lang/services/index.json
@@ -1,6 +1,11 @@
 {
     "de": {
         "title": "Welche Dienstleistungen wir anbieten",
+        "titleMobile": [
+            "Welche Dienst-",
+            "Leistungen wir",
+            "anbieten"
+        ],
         "description": "Bei HelphisTech bieten wir eine breite Palette von Webentwicklungsdiensten an, um Unternehmen beim Aufbau einer starken Online-Präsenz und beim Erreichen ihrer digitalen Ziele zu unterstützen. Unser Team aus erfahrenen Entwicklern ist darin geschult, maßgeschneiderte Websites, Webanwendungen und E-Commerce-Plattformen zu erstellen, die auf die individuellen Bedürfnisse jedes Kunden zugeschnitten sind.",
         "categories": {
             "title": "Kategorien",
