Update/contact modal texts

--- a/client/src/lang/components/Modals/Contact/Index.json
+++ b/client/src/lang/components/Modals/Contact/Index.json
@@ -14,11 +14,7 @@
                     "id": "webapp_development",
                     "text": "App",
                     "icon": "fa-duotone fa-window blue",
-                    "selected": "blue",
-                    "mobile": [
-                        "Web",
-                        "anwendungen"
-                    ]
+                    "selected": "blue"
                 },
                 {
                     "id": "modify_website",
@@ -283,6 +279,10 @@
                         ],
                         "icon": "fa-duotone fa-window blue",
                         "selected": "blue"
+                    },
+                    {
+                        "id": "other",
+                        "text": "Sonstige"
                     }
                 ]
             },
@@ -591,6 +591,10 @@
                         "text": "Responsive Design",
                         "icon": "fa-duotone fa-window blue",
                         "selected": "blue"
+                    },
+                    {
+                        "id": "other",
+                        "text": "Other"
                     }
                 ]
             },
@@ -871,6 +875,10 @@
                         "text": "Responsive Design",
                         "icon": "fa-duotone fa-window blue",
                         "selected": "blue"
+                    },
+                    {
+                        "id": "other",
+                        "text": "Otro"
                     }
                 ]
             },
