Update/logo & contact modal (#144)
* Fix blog image spacing (#136)

* Update/contact modal texts (#137)

* Update/hero section texts (#138)

* Fix/hero & navbar colors on light mode (#140)

* Update/logo (1/2) (#141)

* Update/logo (2/2) (#142)

Update/logo (2/2)

* Update/contact modal texts (#143)

--- a/client/src/lang/components/Modals/Contact/Index.json
+++ b/client/src/lang/components/Modals/Contact/Index.json
@@ -14,11 +14,7 @@
                     "id": "webapp_development",
                     "text": "App",
                     "icon": "fa-duotone fa-window blue",
-                    "selected": "blue",
-                    "mobile": [
-                        "Web",
-                        "anwendungen"
-                    ]
+                    "selected": "blue"
                 },
                 {
                     "id": "modify_website",
