Fix/contact form text

--- a/client/src/lang/components/Modals/Contact/Index.json
+++ b/client/src/lang/components/Modals/Contact/Index.json
@@ -190,7 +190,7 @@
                     },
                     {
                         "id": "new_functionality",
-                        "text": "Neue Funktionalitäten",
+                        "text": "Live Chat",
                         "icon": "fa-duotone fa-browser violet",
                         "selected": "violet",
                         "mobile": [
@@ -342,7 +342,7 @@
                     },
                     {
                         "id": "cms",
-                        "text": "Neue Funktionalitäten",
+                        "text": "Live Chat",
                         "mobile": [
                             "Inhalts",
                             "aktualisierung",
