--- a/client/src/lang/services/index.json
+++ b/client/src/lang/services/index.json
@@ -17,7 +17,8 @@
         "notFound": {
             "p1": "Wir haben keine Ergebnisse für Ihre Suche gefunden.",
             "p2": "Versuchen Sie es mit anderen Kategorien."
-        }
+        },
+        "button": "BUCHEN SIE EINE KOSTENLOSE BERATUNG"
     },
     "en": {
         "title": "What Services We Offer",
@@ -32,7 +33,8 @@
         "notFound": {
             "p1": "We have not found results for your search.",
             "p2": "Try using other categories."
-        }
+        },
+        "button": "BOOK A FREE CONSULTATION"
     },
     "es": {
         "title": "Qué Servicios Ofrecemos",
@@ -47,6 +49,7 @@
         "notFound": {
             "p1": "No hemos encontrado resultados para tu búsqueda.",
             "p2": "Prueba usando otras categorías."
-        }
+        },
+        "button": "RESERVA UNA CONSULTA GRATUITA"
     }
 }
